@@ -1,16 +1,16 @@
 Package: krm
 LazyLoad: yes
 LazyData: yes
-Version: 2019.12-11
+Version: 2020.5-20
 Title: Kernel Based Regression Models
 Authors@R: c(person("Youyi", "Fong", role = "cre", email = "youyifong@gmail.com"), person("Saheli", "Datta", role = "aut", email = "saheli8@gmail.com"), person("Krisztian", "Sebestyen", role = "aut", email = "ksebestyen@gmail.com"), person("Steve", "Park", role = "ctb"), person("Dave", "Geyer", role = "ctb"))
 Depends: R (>= 3.3.0), kyotil
 Suggests: RUnit, MASS
 Imports: methods
-Description: Implements several methods for testing the variance component parameter in regression models that contain kernel-based random effects, including a maximum of adjusted scores test. Several kernels are supported, including a profile hidden Markov model mutual information kernel for protein sequence.
+Description: Implements several methods for testing the variance component parameter in regression models that contain kernel-based random effects, including a maximum of adjusted scores test. Several kernels are supported, including a profile hidden Markov model mutual information kernel for protein sequence. This package is described in Fong et al. (2015) <DOI:10.1093/biostatistics/kxu056>.
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2019-12-10 18:11:59 UTC; Youyi
+Packaged: 2020-05-21 02:28:56 UTC; Youyi
 Author: Youyi Fong [cre],
   Saheli Datta [aut],
   Krisztian Sebestyen [aut],
@@ -18,4 +18,4 @@ Author: Youyi Fong [cre],
   Dave Geyer [ctb]
 Maintainer: Youyi Fong <youyifong@gmail.com>
 Repository: CRAN
-Date/Publication: 2019-12-10 18:50:02 UTC
+Date/Publication: 2020-05-21 12:50:06 UTC
